@@ -1,8 +1,10 @@
+
 ////////////////////////
 // include these headers
 ////////////////////////
 #include "Fitter.h"
 #include "DetectorAtlas_7TeV.h"
+#include "LikelihoodBase.h"
 #include "LikelihoodTopLeptonJets.h"
 #include "PhysicsConstants.h"
 #include "Particles.h"
@@ -32,15 +34,26 @@ if (!myFitter->SetDetector(myDetector))
 KLFitter::LikelihoodTopLeptonJets * myLikelihood = new KLFitter::LikelihoodTopLeptonJets(); 
 // set the lepton type for the hypothesis to be tested by the fitter
 // kElectron or kMuon
-myLikelihood->SetLeptonType(Fitter::LikelihoodTopLeptonJets::kElectron);
+myLikelihood->SetLeptonType(KLFitter::LikelihoodTopLeptonJets::kElectron);
 // if true: the top mass is constrained to the Breit-Wigner distribution around a fixed top mass value
 myLikelihood->SetFlagTopMassFixed(false);
 // set the central value for the fixed top mass for the case SetFlagTopMassFixed == true
 myLikelihood->PhysicsConstants()->SetMassTop(172.5);
-// if true: use a b-tagging veto to constrain the number of permutations
-myLikelihood->SetFlagBTagging(false);
-// set the cut value for the b-tagging veto
+
+// use a b-tagging information to constrain the number of permutations
+// b-tagging settings:
+// - kNotag = don't use b-tagging information
+// - kVeto  = use the b-tagging veto
+// - kWorkingPoint = use the b-tagging probabilites from a given working point
+myLikelihood->SetBTagging(KLFitter::LikelihoodBase::kNotag);
+//myLikelihood->SetBTagging(KLFitter::LikelihoodBase::kVeto);
+//myLikelihood->SetBTagging(KLFitter::LikelihoodBase::kWorkingPoint);
+// set the b-tagging cut / working point value
 myLikelihood->SetCutBTag(5.85);
+// If you are using kWorkingPoint: Make sure to set btag and efficiency if btagghing set to a working point!
+myLikelihood->SetbtagEff(0.6);  // between 0 and 1
+myLikelihood->SetbtagRej(900.); // > 1
+
 // if true: use the jet mass instead of the quark mass
 myLikelihood->SetFlagUseJetMass(false);
 
